--- a/alumnimngmtsys to see output/index.html
+++ b/alumnimngmtsys to see output/index.html
@@ -3,72 +3,114 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alumni Management System</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <title>Alumni Management System - Login</title>
+    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <div class="container">
-        <!-- Sidebar -->
-        <aside class="sidebar" id="sidebar">
-            <div class="sidebar-header">
+    <div class="login-container">
+        <div class="login-card">
+            <!-- Header Section -->
+            <div class="login-header">
                 <div class="logo">
                     <i class="fas fa-graduation-cap"></i>
-                    <h2>Alumni MS</h2>
                 </div>
-                <button class="sidebar-toggle" id="sidebar-toggle">
-                    <i class="fas fa-bars"></i>
-                </button>
+                <h1>Alumni Management System</h1>
+                <p>Sign in to your account</p>
             </div>
-            <nav class="nav">
-                <ul id="nav-list">
-                    <!-- Navigation items will be populated here -->
-                </ul>
-            </nav>
-        </aside>
 
-        <!-- Main Content -->
-        <main class="main-content">
-            <header class="header">
-                <div class="header-left">
-                    <h1 id="page-title">Dashboard</h1>
-                    <p id="page-subtitle">Welcome to Alumni Management System</p>
+            <!-- Login Form -->
+            <form id="loginForm" class="login-form">
+                <div class="form-group">
+                    <label for="email">Email Address</label>
+                    <div class="input-wrapper">
+                        <i class="fas fa-envelope input-icon"></i>
+                        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                    </div>
                 </div>
-                <div class="header-right">
-                    <div class="user-info">
-                        <div class="user-avatar">
-                            <i class="fas fa-user-circle"></i>
-                        </div>
-                        <div class="user-details">
-                            <span id="user-name">John Doe</span>
-                            <span id="user-role">Admin</span>
-                        </div>
-                        <button id="logout-btn" class="btn-logout">
-                            <i class="fas fa-sign-out-alt"></i>
+
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <div class="input-wrapper">
+                        <i class="fas fa-lock input-icon"></i>
+                        <input type="password" id="password" name="password" placeholder="Enter your password" required>
+                        <button type="button" class="password-toggle" id="passwordToggle">
+                            <i class="fas fa-eye"></i>
                         </button>
                     </div>
                 </div>
-            </header>
 
-            <!-- Dashboard Content -->
-            <div id="content" class="content-area">
-                <!-- Dashboard cards will be loaded here -->
-            </div>
-        </main>
-    </div>
+                <div class="form-options">
+                    <label class="checkbox-container">
+                        <input type="checkbox" id="rememberMe">
+                        <span class="checkmark"></span>
+                        Remember me
+                    </label>
+                    <a href="#" class="forgot-password">Forgot Password?</a>
+                </div>
 
-    <!-- Modal for various actions -->
-    <div id="modal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <div id="modal-body">
-                <!-- Modal content will be loaded here -->
+                <button type="submit" class="login-btn" id="loginBtn">
+                    <span class="btn-text">Sign In</span>
+                    <div class="loading-spinner" style="display: none;">
+                        <i class="fas fa-spinner fa-spin"></i>
+                    </div>
+                </button>
+            </form>
+
+            <!-- Demo Accounts Section -->
+            <div class="demo-section">
+                <div class="demo-header">
+                    <h3>Demo Accounts</h3>
+                    <p>Click on any role to auto-fill credentials</p>
+                </div>
+                <div class="demo-accounts">
+                    <div class="demo-account" data-email="superadmin@alumni.edu" data-password="super123" data-role="Super Admin">
+                        <i class="fas fa-crown"></i>
+                        <span>Super Admin</span>
+                    </div>
+                    <div class="demo-account" data-email="admin@alumni.edu" data-password="admin123" data-role="Admin">
+                        <i class="fas fa-user-shield"></i>
+                        <span>Admin</span>
+                    </div>
+                    <div class="demo-account" data-email="registrar@alumni.edu" data-password="reg123" data-role="Registrar">
+                        <i class="fas fa-clipboard-list"></i>
+                        <span>Registrar</span>
+                    </div>
+                    <div class="demo-account" data-email="alumni@alumni.edu" data-password="alumni123" data-role="Alumni">
+                        <i class="fas fa-user-graduate"></i>
+                        <span>Alumni</span>
+                    </div>
+                    <div class="demo-account" data-email="jobmanager@alumni.edu" data-password="job123" data-role="Job Manager">
+                        <i class="fas fa-briefcase"></i>
+                        <span>Job Manager</span>
+                    </div>
+                    <div class="demo-account" data-email="eventmanager@alumni.edu" data-password="event123" data-role="Event Manager">
+                        <i class="fas fa-calendar-alt"></i>
+                        <span>Event Manager</span>
+                    </div>
+                    <div class="demo-account" data-email="finance@alumni.edu" data-password="finance123" data-role="Finance Officer">
+                        <i class="fas fa-dollar-sign"></i>
+                        <span>Finance Officer</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    
 
-    <script src="script.js"></script>
+    <!-- Success Modal -->
+    <div id="successModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <i class="fas fa-check-circle success-icon"></i>
+                <h2>Login Successful!</h2>
+            </div>
+            <div class="modal-body">
+                <p>Welcome back, <span id="userRole"></span>!</p>
+                <p>Redirecting to your dashboard...</p>
+            </div>
+        </div>
+    </div>
+
+    <script src="login.js"></script>
 </body>
 </html>
